deploy/k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deuce
  namespace: deuce
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: deuce
    # Reserve with: gcloud compute addresses create deuce --global
    kubernetes.io/ingress.global-static-ip-name: deuce
spec:
  rules:
    - host: DOMAIN
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: deuce
                port:
                  number: 80
